# key-finder

./: README.md  app.html  index.html  manifest.webmanifest  sw.js  version.json
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: build-dist.mjs
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
