[package]
name = "key-finder"
version = "1.0.0"
description = "Key Finder desktop app"
authors = ["Kyle Kesterson"]
edition = "2021"

[lib]
name = "key_finder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
